--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.5.1",
+    "ethers": "^5.6.9",
     "identicons": "^0.1.0",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.2.0",
