--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "ethers": "^5.6.9",
     "identicons": "^0.1.0",
     "mdb-react-ui-kit": "^8.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hooks-global-state": "^2.1.0",
     "react-icons": "^5.1.0",
     "react-identicons": "^1.2.5",
     "react-modal": "^3.16.1",
