--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "dotenv": "^16.4.5",
     "ethers": "^5.6.9",
     "identicons": "^0.1.0",
     "mdb-react-ui-kit": "^8.0.0",
